--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,11 @@ codeurl: 'https://github.com/tpdorsey/sample-docs-project'
 
 # Default categories (in order) to appear in the navigation
 sections: [
-    ['doc', 'Documentation'],
-    ['tut', 'Tutorial'],
+    ['start', 'Getting Started'],
+    ['guide', 'User Guide'],
     ['ref', 'Reference'],
-    ['dev', 'Developers'],
-    ['post', 'Posts']
+    ['tut', 'Tutorials'],
+    ['help', 'Help']
 ]
 
 # Keep as an empty string if served up at the root. If served up at a specific
