--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site title and subtitle. This is used in _includes/header.html
-title: 'Sample Documentation Site'
+title: 'Sample Documentation Project'
 subtitle: 'Jekyll Docs Template makes this easy'
 
 # if you wish to integrate disqus on pages set your shortname here
